Fix Dropdown `z-index`

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -5,6 +5,8 @@
   background: white;
   box-shadow: 0 5px 15px 5px rgba(0, 0, 0, 0.2);
 
+  z-index: 1;
+
   ul {
     li {
       display: block;
